Undo dark mode fix

--- a/public/main.css
+++ b/public/main.css
@@ -7,29 +7,10 @@
 }
 :root {
   --theme-color: #60a5fa;
-  /* font-family: 'Baloo 2', cursive; */
 }
 @media (prefers-color-scheme: dark) {
   :root {
     --theme-color: #1e3a8a;
-  }
-  .prose {
-    color: #e5e7eb;
-  }
-  .prose p {
-    color: #e5e7eb;
-  }
-  .prose h1 {
-    color: #e5e7eb;
-  }
-  .prose h2 {
-    color: #e5e7eb;
-  }
-  .prose a {
-    color: #fef08a;
-  }
-  .prose p.lead {
-    color: #e5e7eb;
   }
 }
 header,
